<resources>
    <string name="app_name">RfindR</string>
    <string name="content_authority">com.jjindustries.prototype.rfindr</string>


    <!--Activity Names-->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_create_reminder">Create New Reminder</string>
    <string name="title_update_reminder">Update Reminder</string>
    <string name="title_activity_maps">Map</string>

    <!--Menu item titles-->
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>


    <!--Error messages-->
    <string name="missing_reminder_name_toast_text">Please enter a name.</string>
    <string name="missing_location_name_toast_text">Please select a place.</string>

    <!--UI labels and prompts-->
    <string name="reminder_name_et_prompt">Reminder Name</string>
    <string name="reminder_description_et_prompt">Reminder Description (Optional)</string>
    <string name="save_button_label">Save</string>
    <string name="place_picker_button_label">Pick a place</string>
    <string name="place_picker_label">Select a location</string>
    <string name="radius_label">Radius </string>
    <string name="distance_to_label">Current Distance</string>
    <string name="no_reminders_created_label">No reminders have been created</string>
    <string name="name_label">Name</string>
    <string name="description_label">Description</string>

    <!--Delete dialog strings-->
    <string name="delete_reminder_dialog_prompt">Are you sure you want to delete this reminder?</string>
    <string name="delete_reminder_dialog_positive_label">Yes</string>
    <string name="delete_reminder_dialog_negative_label">No</string>
    <string name="reminder_was_deleted_label">Reminder was deleted.</string>

    <!--Radius Spinner Options-->
    <string name="option_10m">10 m</string>
    <string name="option_50m">50 m</string>
    <string name="option_100m">100 m</string>
    <string name="option_300m">300 m</string>
    <string name="option_500m">500 m</string>
    <string name="option_1km">1 km</string>
    <string name="option_5km">5 km</string>

    <!--Reminder Status Options-->
    <string name="not_completed_status">not_completed</string>
    <string name="completed_status">completed</string>

    <!--Units-->
    <string name="meter_unit">m</string>
    <string name="kilometer_unit">km</string>

    <!--Location user interaction strings-->
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <!--Notification strings-->
    <string name="close_to_location_notification_title">Task is nearby!</string>
    <string name="close_to_location_notification_body">You\'re close to</string>
    <string name="snooze_reminder_notification_action">Snooze</string>
    <string name="see_details_reminder_notification_action">See Details</string>
    <string name="delete_reminder_notification_action">Delete Reminder</string>

</resources>
